language/move-compiler/tests/move_check/naming/unbound_unqualified_function.exp
error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_unqualified_function.move:3:9
  │
3 │         bar();
  │         ^^^ Unbound function 'bar' in current scope

warning[W09002]: unused variable
  ┌─ tests/move_check/naming/unbound_unqualified_function.move:4:13
  │
4 │         let x = bar();
  │             ^ Unused local variable 'x'. Consider removing or prefixing with an underscore: '_x'

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_unqualified_function.move:4:17
  │
4 │         let x = bar();
  │                 ^^^ Unbound function 'bar' in current scope

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/naming/unbound_unqualified_function.move:5:10
  │
5 │         *bar() = 0;
  │          ^^^ Unbound function 'bar' in current scope

